# python-genbadge

./: .gitignore  404.html  LICENSE  README.md  changelog.html  index.html  long_description.html  mkdocs.yml  noxfile-requirements.txt  noxfile.py  setup.cfg  setup.py  sitemap.xml
.github/workflows/: base.yml  ghpages.yml
changelog/: index.html
ci_tools/: .pylintrc  flake8-requirements.txt  github_release.py  nox_utils.py
docs/: changelog.md  index.md  long_description.md  mkdocs.yml
genbadge/: __init__.py  main.py  utils_badge.py  utils_coverage.py  utils_flake8.py  utils_junit.py  xunitparser_copy.py
genbadge/tests/: .gitignore  test_core.py  test_readme.py  test_readme_common.py
genbadge/tests/reports/flake8/: flake8stats.txt
genbadge/tests/reports/junit/: junit.xml
long_description/: index.html
reports/coverage/: class_index.html  coverage.xml  d_8d3a89da19ee0d20_test_core_py.html  d_8d3a89da19ee0d20_test_readme_common_py.html  d_a160653144a4a8fa___init___py.html  d_a160653144a4a8fa__version_py.html  d_a160653144a4a8fa_main_py.html  d_a160653144a4a8fa_utils_badge_py.html  d_a160653144a4a8fa_utils_coverage_py.html  d_a160653144a4a8fa_utils_flake8_py.html  d_a160653144a4a8fa_utils_junit_py.html  d_a160653144a4a8fa_xunitparser_copy_py.html  function_index.html  genbadge___init___py.html  genbadge__version_py.html  genbadge_main_py.html  genbadge_utils_badge_py.html  genbadge_utils_coverage_py.html  genbadge_utils_flake8_py.html  genbadge_utils_junit_py.html  genbadge_xunitparser_copy_py.html  index.html  status.json  z_54579382f1cf822d___init___py.html  z_54579382f1cf822d__version_py.html  z_54579382f1cf822d_main_py.html  z_54579382f1cf822d_utils_badge_py.html  z_54579382f1cf822d_utils_coverage_py.html  z_54579382f1cf822d_utils_flake8_py.html  z_54579382f1cf822d_utils_junit_py.html  z_54579382f1cf822d_xunitparser_copy_py.html
reports/flake8/: genbadge.main.report.html  genbadge.main.source.html  genbadge.utils_badge.report.html  genbadge.utils_badge.source.html  genbadge.utils_coverage.report.html  genbadge.utils_coverage.source.html  genbadge.utils_flake8.report.html  genbadge.utils_flake8.source.html  genbadge.utils_junit.report.html  genbadge.utils_junit.source.html  genbadge.xunitparser_copy.report.html  genbadge.xunitparser_copy.source.html  index.html
reports/junit/: junit.xml  report.html
search/: search_index.json
src/genbadge/: main.py  utils_badge.py  utils_coverage.py  utils_flake8.py
tests/: test_core.py  test_readme_common.py
tests/reports/coverage/: coverage.xml  coverage_branch_without_branches.xml  coverage_nobranch.xml
